--- a/po/pa.po
+++ b/po/pa.po
@@ -1,4 +1,4 @@
-# translation of empathy.HEAD.po to Punjabi
+# translation of tp-account-widgets.HEAD.po to Punjabi
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 #
