--- a/po/si.po
+++ b/po/si.po
@@ -1,6 +1,6 @@
-# Sinhala translation for empathy.
-# Copyright (C) 2009 empathy's COPYRIGHT HOLDER
-# This file is distributed under the same license as the empathy package.
+# Sinhala translation for tp-account-widgets.
+# Copyright (C) 2009 tp-account-widgets's COPYRIGHT HOLDER
+# This file is distributed under the same license as the tp-account-widgets package.
 #
 # Danishka Navin <danishka@gmail.com>, 2010.
 msgid ""
