--- a/po/an.po
+++ b/po/an.po
@@ -1,6 +1,6 @@
-# Aragonese translation for empathy.
-# Copyright (C) 2010 empathy's COPYRIGHT HOLDER
-# This file is distributed under the same license as the empathy package.
+# Aragonese translation for tp-account-widgets.
+# Copyright (C) 2010 tp-account-widgets's COPYRIGHT HOLDER
+# This file is distributed under the same license as the tp-account-widgets package.
 # Daniel Martinez <entaltoaragon@gmail.com>, 2010, 2011, 2012.
 #
 msgid ""
