--- a/po/bn.po
+++ b/po/bn.po
@@ -1,4 +1,4 @@
-# Bengali translation for empathy
+# Bengali translation for tp-account-widgets
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 #
