--- a/po/br.po
+++ b/po/br.po
@@ -1,6 +1,6 @@
-# Breton translation for empathy
+# Breton translation for tp-account-widgets
 # Copyright (c) 2009 Rosetta Contributors and Canonical Ltd 2009
-# This file is distributed under the same license as the empathy package.
+# This file is distributed under the same license as the tp-account-widgets package.
 # Denis <denisarnuad@yahoo.fr>, 2009.
 # Jérémy AR FLOC'H <jeremy.lefloch@gmail.com>, 2010.
 msgid ""
