--- a/po/crh.po
+++ b/po/crh.po
@@ -1,5 +1,5 @@
-# QIRIMTATARCA empathy
-# This file is distributed under the same license as the empathy package.
+# QIRIMTATARCA tp-account-widgets
+# This file is distributed under the same license as the tp-account-widgets package.
 # Copyright (C) 2003-2009 The Free Software Foundation, Inc.
 # Reşat SABIQ <tilde.birlik@gmail.com>, 2009, 2010, 2011, 2012, 2013.
 #
