--- a/po/cs.po
+++ b/po/cs.po
@@ -1,7 +1,7 @@
-# Czech translation of empathy.
-# Copyright (C) 2003, 2004, 2008, 2009, 2010 the author(s) of empathy.
+# Czech translation of tp-account-widgets.
+# Copyright (C) 2003, 2004, 2008, 2009, 2010 the author(s) of tp-account-widgets.
 # Copyright (C) 2003, 2004 Miloslav Trmac <mitr@volny.cz>.
-# This file is distributed under the same license as the empathy package.
+# This file is distributed under the same license as the tp-account-widgets package.
 #
 # Miloslav Trmac <mitr@volny.cz>, 2003, 2004.
 # Lucas Lommer <llommer@svn.gnome.org>, 2008, 2009, 2010.
