--- a/po/el.po
+++ b/po/el.po
@@ -1,6 +1,6 @@
-# translation of empathy.HEAD.po to Greek
+# translation of tp-account-widgets.HEAD.po to Greek
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the Empathy package.
+# This file is distributed under the same license as the tp-account-widgets package.
 # Dimitris Glezos <dimitris@glezos.com>, 2006.
 # Christos Trochalakis <yatiohi@ideopolis.gr>, 2006.
 # Marios Zindilis <m.zindilis@dmajor.org>, 2009.
