--- a/po/fa.po
+++ b/po/fa.po
@@ -1,6 +1,6 @@
-# Persian translation of empathy
+# Persian translation of tp-account-widgets
 # Copyright (C) 2010-2011 Iranian Free Software Users Group (IFSUG.org)translation team.
-# This file is distributed under the same license as the empathy package.
+# This file is distributed under the same license as the tp-account-widgets package.
 # Mahyar Moghimi <mahyar.moqimi@gmail.com>, 2010.
 # Arash Mousavi <mousavi.arash@gmail.com>, 2011, 2012, 2013.
 #
