--- a/po/fi.po
+++ b/po/fi.po
@@ -1,4 +1,4 @@
-# This file is distributed under the same license as the empathy package.
+# This file is distributed under the same license as the tp-account-widgets package.
 # Copyright (C) 2006-2009 Free Software Foundation Inc.
 # Copyright (C) 2006 Samuli Seppänen and Henna Nykänen.
 # Jiri Grönroos https://launchpad.net/~jiri-gronroos
