--- a/po/ga.po
+++ b/po/ga.po
@@ -1,6 +1,6 @@
-# Irish translations for empathy package.
+# Irish translations for tp-account-widgets package.
 # Copyright (C) 2009-2012 Free Software Foundation, Inc.
-# This file is distributed under the same license as the empathy package.
+# This file is distributed under the same license as the tp-account-widgets package.
 # Seán de Búrca <leftmostcat@gmail.com>, 2009-2012.
 #
 msgid ""
