--- a/po/hi.po
+++ b/po/hi.po
@@ -1,4 +1,4 @@
-# translation of empathy.master.hi.po to Hindi
+# translation of tp-account-widgets.master.hi.po to Hindi
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 #
