--- a/po/hu.po
+++ b/po/hu.po
@@ -1,5 +1,5 @@
-# Hungarian translation of empathy
-# This file is distributed under the same license as the empathy package.
+# Hungarian translation of tp-account-widgets
+# This file is distributed under the same license as the tp-account-widgets package.
 # Copyright (C) 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, Free Software Foundation, Inc.
 #
 # Gabor Kelemen <kelemeng at gnome dot hu>, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013.
