--- a/po/it.po
+++ b/po/it.po
@@ -1,6 +1,6 @@
-# Italian translation for Empaty
+# Italian translation for tp-account-widgets
 # Copyright (C) 2003-2010, 2011, 2012, 2013 The Free Software Foundation, Inc.
-# This file is distributed under the same license as the Empaty package.
+# This file is distributed under the same license as the tp-account-widgets package.
 # Fabio Bonelli <fabiobonelli@libero.it>, 2003
 # Michele Baldessari <michele@pupazzo.org>, 2003
 # Luca Ferretti <lferrett@gnome.org>, 2011.
