--- a/po/ja.po
+++ b/po/ja.po
@@ -1,6 +1,6 @@
-# empathy ja.po.
-# Copyright (C) 2007-2012 empathy's COPYRIGHT HOLDER
-# This file is distributed under the same license as the empathy package.
+# tp-account-widgets ja.po.
+# Copyright (C) 2007-2012 tp-account-widgets's COPYRIGHT HOLDER
+# This file is distributed under the same license as the tp-account-widgets package.
 # Takeshi AIHANA <takeshi.aihana@gmail.com>, 2007-2009.
 # Kentaro Kazuhama <kazken3@gmail.com>, 2009.
 # GLSJPN_Etsuko <etsuko.murozono@ptiglobal.net>, 2009.
