--- a/po/kk.po
+++ b/po/kk.po
@@ -1,4 +1,4 @@
-# Kazakh translation of empathy.
+# Kazakh translation of tp-account-widgets.
 # Copyright (C) 2010 HZ
 # This file is distributed under the same license as the brasero package.
 # Baurzhan Muftakhidinov <baurthefirst@gmail.com>, 2010.
