--- a/po/kn.po
+++ b/po/kn.po
@@ -1,4 +1,4 @@
-# translation of empathy.master.kn.po to Kannada
+# translation of tp-account-widgets.master.kn.po to Kannada
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 #
