--- a/po/nb.po
+++ b/po/nb.po
@@ -1,4 +1,4 @@
-# Norwegian bokmål translation of empathy.
+# Norwegian bokmål translation of tp-account-widgets.
 # Copyright © 2003-2005 Free Software Foundation, Inc.
 # Kjartan Maraas <kmaraas@gnome.org>, 2003-2013.
 # Sigurd Gartmann <sigurdga@yahoo-inc.com>, 2005, 2006.
