--- a/po/ne.po
+++ b/po/ne.po
@@ -1,4 +1,4 @@
-# translation of empathy.HEAD.ne.po to Nepali
+# translation of tp-account-widgets.HEAD.ne.po to Nepali
 # This file is distributed under the same license as the PACKAGE package.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER.
 #
