--- a/po/nl.po
+++ b/po/nl.po
@@ -1,6 +1,6 @@
-# Dutch translation of Empathy.
+# Dutch translation of tp-account-widgets.
 #
-# This file is distributed under the same license as the empathy package.
+# This file is distributed under the same license as the tp-account-widgets package.
 #
 # This translation is based on the translation for Gossip.
 #
