--- a/po/or.po
+++ b/po/or.po
@@ -1,7 +1,7 @@
 # translation of or.po to Oriya
-# Oriya translation of empathy.
-# Copyright (C) 2009 empathy's COPYRIGHT HOLDER
-# This file is distributed under the same license as the empathy package.
+# Oriya translation of tp-account-widgets.
+# Copyright (C) 2009 tp-account-widgets's COPYRIGHT HOLDER
+# This file is distributed under the same license as the tp-account-widgets package.
 #
 # Manoj Kumar Giri <mgiri@redhat.com>, 2009, 2012, 2013.
 msgid ""
