--- a/po/pt.po
+++ b/po/pt.po
@@ -1,7 +1,7 @@
-# empathy's Portuguese translation
+# tp-account-widgets's Portuguese translation
 # Copyright © 2003, 2004 gossip
-# Copyright © 2008, 2009, 2010, 2011, 2012, 2013 empathy
-# This file is distributed under the same license as the empathy package.
+# Copyright © 2008, 2009, 2010, 2011, 2012, 2013 tp-account-widgets
+# This file is distributed under the same license as the tp-account-widgets package.
 # Duarte Loreto <happyguy_pt@hotmail.com>, 2003, 2004, 2008, 2009, 2010, 2011, 2012, 2013.
 # 
 msgid ""
