--- a/po/sk.po
+++ b/po/sk.po
@@ -1,6 +1,6 @@
-# Slovak translation for empathy.
+# Slovak translation for tp-account-widgets.
 # Copyright (C) 2010-2013 Free Software Foundation, Inc.
-# This file is distributed under the same license as the empathy package.
+# This file is distributed under the same license as the tp-account-widgets package.
 # Miroslav Biňas <mirek@host.sk>, 2010.
 # Pavol Klačanský <pavol@klacansky.com>, 2011-2013.
 #
