--- a/po/sv.po
+++ b/po/sv.po
@@ -1,4 +1,4 @@
-# Swedish messages for Empathy.
+# Swedish messages for tp-account-widgets.
 # Copyright (C) 2002-2012 Free Software Foundation, Inc.
 # Richard Hult <richard@imendio.com>, 2002, 2003.
 # Christian Rose <menthos@menthos.com>, 2003, 2004.
