--- a/po/ta.po
+++ b/po/ta.po
@@ -1,4 +1,4 @@
-# translation of empathy.master.ta.po to Tamil
+# translation of tp-account-widgets.master.ta.po to Tamil
 # translation of ta.po to
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
