--- a/po/tr.po
+++ b/po/tr.po
@@ -1,5 +1,5 @@
-# translation of empathy to Turkish
-# This file is distributed under the same license as the empathy package.
+# translation of tp-account-widgets to Turkish
+# This file is distributed under the same license as the tp-account-widgets package.
 # Copyright (C) 2008-2011 Free Software Foundation, Inc.
 #
 # Görkem Çetin <gorkem@kde.org>, 2004.
