--- a/po/ug.po
+++ b/po/ug.po
@@ -1,4 +1,4 @@
-# Uyghur translation for empathy.
+# Uyghur translation for tp-account-widgets.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # Gheyret Kenji<gheyret@gmail.com>,2010.
