--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -1,4 +1,4 @@
-# traditional Chinese translation of empathy.
+# traditional Chinese translation of tp-account-widgets.
 # Copyright (C) 2003, 2004 Free Software Foundation, Inc.
 # Abel Cheung <abel@oaka.org>, 2003, 2004.
 # Chao-Hsiung Liao <j_h_liau@yahoo.com.tw>, 2005.
