--- a/po/it.po
+++ b/po/it.po
@@ -8,10 +8,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: empathy\n"
+"Project-Id-Version: tp-account-widgets\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-07-31 15:46+0100\n"
-"PO-Revision-Date: 2013-07-17 09:15+0200\n"
+"POT-Creation-Date: 2013-08-20 19:16+0200\n"
+"PO-Revision-Date: 2013-08-20 19:16+0200\n"
 "Last-Translator: Milo Casagrande <milo@ubuntu.com>\n"
 "Language-Team: Italian <tp@lists.linux.it>\n"
 "Language: it\n"
@@ -272,6 +272,78 @@ msgstr "Qual è la password di AIM?"
 msgid "Remember Password"
 msgstr "Ricordare la password"
 
+#: ../tp-account-widgets/tpaw-account-widget.c:672
+msgid "Account"
+msgstr "Account"
+
+#: ../tp-account-widgets/tpaw-account-widget.c:673
+#: ../tp-account-widgets/tpaw-account-widget-irc.ui.h:12
+msgid "Password"
+msgstr "Password"
+
+#: ../tp-account-widgets/tpaw-account-widget.c:674
+#: ../tp-account-widgets/tpaw-account-widget-sip.ui.h:12
+#: ../tp-account-widgets/tpaw-irc-network-dialog.c:500
+msgid "Server"
+msgstr "Server"
+
+#: ../tp-account-widgets/tpaw-account-widget.c:675
+#: ../tp-account-widgets/tpaw-account-widget-sip.ui.h:20
+#: ../tp-account-widgets/tpaw-irc-network-dialog.c:521
+msgid "Port"
+msgstr "Porta"
+
+#: ../tp-account-widgets/tpaw-account-widget.c:759
+#, c-format
+msgid "%s"
+msgstr "%s"
+
+#: ../tp-account-widgets/tpaw-account-widget.c:814
+#, c-format
+msgid "%s:"
+msgstr "%s:"
+
+#: ../tp-account-widgets/tpaw-account-widget.c:1426
+msgid "Username:"
+msgstr "Nome utente:"
+
+#: ../tp-account-widgets/tpaw-account-widget.c:1754
+msgid "A_pply"
+msgstr "A_pplica"
+
+#: ../tp-account-widgets/tpaw-account-widget.c:1783
+msgid "L_og in"
+msgstr "Acce_di"
+
+#: ../tp-account-widgets/tpaw-account-widget.c:1853
+msgid "This account already exists on the server"
+msgstr "Questo account esiste già sul server"
+
+#: ../tp-account-widgets/tpaw-account-widget.c:1857
+msgid "Create a new account on the server"
+msgstr "Creare un nuovo account sul server"
+
+#. To translators: The first parameter is the login id and the
+#. * second one is the network. The resulting string will be something
+#. * like: "MyUserName on freenode".
+#. * You should reverse the order of these arguments if the
+#. * server should come before the login id in your locale.
+#: ../tp-account-widgets/tpaw-account-widget.c:2296
+#, c-format
+msgid "%1$s on %2$s"
+msgstr "%1$s su %2$s"
+
+#. To translators: The parameter is the protocol name. The resulting
+#. * string will be something like: "Jabber Account"
+#: ../tp-account-widgets/tpaw-account-widget.c:2322
+#, c-format
+msgid "%s Account"
+msgstr "Account %s"
+
+#: ../tp-account-widgets/tpaw-account-widget.c:2326
+msgid "New account"
+msgstr "Nuovo account"
+
 #: ../tp-account-widgets/tpaw-account-widget-groupwise.ui.h:2
 #: ../tp-account-widgets/tpaw-account-widget-jabber.ui.h:13
 #: ../tp-account-widgets/tpaw-account-widget-msn.ui.h:2
@@ -352,10 +424,6 @@ msgstr ""
 #: ../tp-account-widgets/tpaw-account-widget-irc.ui.h:11
 msgid "Nickname"
 msgstr "Soprannome"
-
-#: ../tp-account-widgets/tpaw-account-widget-irc.ui.h:12
-msgid "Password"
-msgstr "Password"
 
 #: ../tp-account-widgets/tpaw-account-widget-irc.ui.h:13
 msgid "Quit message"
@@ -563,11 +631,6 @@ msgstr "Rilevare automaticamente il server STUN"
 msgid "Discover Binding"
 msgstr "Rilevare le associazioni"
 
-#: ../tp-account-widgets/tpaw-account-widget-sip.ui.h:12
-#: ../tp-account-widgets/tpaw-irc-network-dialog.c:500
-msgid "Server"
-msgstr "Server"
-
 #: ../tp-account-widgets/tpaw-account-widget-sip.ui.h:13
 msgid "Keep-Alive Options"
 msgstr "Opzioni Keep-Alive"
@@ -597,11 +660,6 @@ msgstr "Routing \"loose\""
 #: ../tp-account-widgets/tpaw-account-widget-sip.ui.h:19
 msgid "Ignore TLS Errors"
 msgstr "Ignorare errori TLS"
-
-#: ../tp-account-widgets/tpaw-account-widget-sip.ui.h:20
-#: ../tp-account-widgets/tpaw-irc-network-dialog.c:521
-msgid "Port"
-msgstr "Porta"
 
 #: ../tp-account-widgets/tpaw-account-widget-sip.ui.h:21
 msgid "Local IP Address"
@@ -648,6 +706,39 @@ msgstr "Qual è l'identificativo Yahoo?"
 msgid "What is your Yahoo! password?"
 msgstr "Qual è la password di Yahoo?"
 
+#: ../tp-account-widgets/tpaw-avatar-chooser.c:539
+#: ../tp-account-widgets/tpaw-avatar-chooser.c:624
+msgid "Couldn't convert image"
+msgstr "Impossibile convertire l'immagine"
+
+#: ../tp-account-widgets/tpaw-avatar-chooser.c:540
+msgid "None of the accepted image formats are supported on your system"
+msgstr "Nessuno dei formati di immagine accettati è supportato dal sistema"
+
+#: ../tp-account-widgets/tpaw-avatar-chooser.c:900
+msgid "Couldn't save picture to file"
+msgstr "Impossibile salvare l'immagine su file"
+
+#: ../tp-account-widgets/tpaw-avatar-chooser.c:1024
+msgid "Select Your Avatar Image"
+msgstr "Seleziona immagine"
+
+#: ../tp-account-widgets/tpaw-avatar-chooser.c:1032
+msgid "Take a picture..."
+msgstr "Scatta foto..."
+
+#: ../tp-account-widgets/tpaw-avatar-chooser.c:1045
+msgid "No Image"
+msgstr "Nessuna immagine"
+
+#: ../tp-account-widgets/tpaw-avatar-chooser.c:1102
+msgid "Images"
+msgstr "Immagini"
+
+#: ../tp-account-widgets/tpaw-avatar-chooser.c:1106
+msgid "All Files"
+msgstr "Tutti i file"
+
 #: ../tp-account-widgets/tpaw-calendar-button.c:63
 msgid "Select..."
 msgstr "Seleziona..."
@@ -657,23 +748,23 @@ msgstr "Seleziona..."
 msgid "_Select"
 msgstr "_Seleziona"
 
-#: ../tp-account-widgets/tpaw-contactinfo-utils.c:96
+#: ../tp-account-widgets/tpaw-contactinfo-utils.c:97
 msgid "Full name"
 msgstr "Nome completo"
 
-#: ../tp-account-widgets/tpaw-contactinfo-utils.c:97
+#: ../tp-account-widgets/tpaw-contactinfo-utils.c:98
 msgid "Phone number"
 msgstr "Numero di telefono"
 
-#: ../tp-account-widgets/tpaw-contactinfo-utils.c:98
+#: ../tp-account-widgets/tpaw-contactinfo-utils.c:99
 msgid "E-mail address"
 msgstr "Indirizzo email"
 
-#: ../tp-account-widgets/tpaw-contactinfo-utils.c:99
+#: ../tp-account-widgets/tpaw-contactinfo-utils.c:100
 msgid "Website"
 msgstr "Sito web"
 
-#: ../tp-account-widgets/tpaw-contactinfo-utils.c:100
+#: ../tp-account-widgets/tpaw-contactinfo-utils.c:101
 msgid "Birthday"
 msgstr "Compleanno"
 
@@ -681,50 +772,50 @@ msgstr "Compleanno"
 #. Note to translators: this is the caption for a string of the form "5
 #. * minutes ago", and refers to the time since the contact last interacted
 #. * with their IM client.
-#: ../tp-account-widgets/tpaw-contactinfo-utils.c:105
+#: ../tp-account-widgets/tpaw-contactinfo-utils.c:106
 msgid "Last seen:"
 msgstr "Ultima attività:"
 
-#: ../tp-account-widgets/tpaw-contactinfo-utils.c:106
+#: ../tp-account-widgets/tpaw-contactinfo-utils.c:107
 msgid "Server:"
 msgstr "Server:"
 
-#: ../tp-account-widgets/tpaw-contactinfo-utils.c:107
+#: ../tp-account-widgets/tpaw-contactinfo-utils.c:108
 msgid "Connected from:"
 msgstr "Connessione da:"
 
 # (ndt) usato lo stesso di xchat-gnome
 #. FIXME: once Idle implements SimplePresence using this information, we can
 #. * and should bin this.
-#: ../tp-account-widgets/tpaw-contactinfo-utils.c:111
+#: ../tp-account-widgets/tpaw-contactinfo-utils.c:112
 msgid "Away message:"
 msgstr "Messaggio di assenza:"
 
-#: ../tp-account-widgets/tpaw-contactinfo-utils.c:124
+#: ../tp-account-widgets/tpaw-contactinfo-utils.c:125
 msgid "work"
 msgstr "lavoro"
 
-#: ../tp-account-widgets/tpaw-contactinfo-utils.c:125
+#: ../tp-account-widgets/tpaw-contactinfo-utils.c:126
 msgid "home"
 msgstr "casa"
 
-#: ../tp-account-widgets/tpaw-contactinfo-utils.c:126
+#: ../tp-account-widgets/tpaw-contactinfo-utils.c:127
 msgid "mobile"
 msgstr "cellulare"
 
-#: ../tp-account-widgets/tpaw-contactinfo-utils.c:127
+#: ../tp-account-widgets/tpaw-contactinfo-utils.c:128
 msgid "voice"
 msgstr "voce"
 
-#: ../tp-account-widgets/tpaw-contactinfo-utils.c:128
+#: ../tp-account-widgets/tpaw-contactinfo-utils.c:129
 msgid "preferred"
 msgstr "preferito"
 
-#: ../tp-account-widgets/tpaw-contactinfo-utils.c:129
+#: ../tp-account-widgets/tpaw-contactinfo-utils.c:130
 msgid "postal"
 msgstr "postale"
 
-#: ../tp-account-widgets/tpaw-contactinfo-utils.c:130
+#: ../tp-account-widgets/tpaw-contactinfo-utils.c:131
 msgid "parcel"
 msgstr "parcel"
 
@@ -773,7 +864,7 @@ msgstr "Password per la stanza «%s» sull'account %s (%s)"
 #. To translator: %s is the name of the protocol, such as "Google Talk" or
 #. * "Yahoo!"
 #.
-#: ../tp-account-widgets/tpaw-protocol.c:62
+#: ../tp-account-widgets/tpaw-protocol.c:63
 #, c-format
 msgid "New %s account"
 msgstr "Nuovo account %s"
@@ -824,20 +915,36 @@ msgstr[1] "%d mesi fa"
 msgid "in the future"
 msgstr "nel futuro"
 
-#: ../tp-account-widgets/tpaw-user-info.c:394
+#: ../tp-account-widgets/tpaw-user-info.c:423
 msgid "Go online to edit your personal information."
 msgstr "Andare in rete per modificare le informazioni personali."
 
 #. Setup id label
-#: ../tp-account-widgets/tpaw-user-info.c:454
+#: ../tp-account-widgets/tpaw-user-info.c:500
 msgid "Identifier"
 msgstr "Identificatore"
 
 #. Setup nickname entry
-#: ../tp-account-widgets/tpaw-user-info.c:459
+#: ../tp-account-widgets/tpaw-user-info.c:508
 msgid "Alias"
 msgstr "Pseudonimo"
 
-#: ../tp-account-widgets/tpaw-user-info.c:474
+#: ../tp-account-widgets/tpaw-user-info.c:525
 msgid "<b>Personal Details</b>"
 msgstr "<b>Dettagli personali</b>"
+
+#: ../tp-account-widgets/tpaw-utils.c:115
+msgid "People Nearby"
+msgstr "Persone nelle vicinanze"
+
+#: ../tp-account-widgets/tpaw-utils.c:120
+msgid "Yahoo! Japan"
+msgstr "Yahoo! Giappone"
+
+#: ../tp-account-widgets/tpaw-utils.c:156
+msgid "Google Talk"
+msgstr "Google Talk"
+
+#: ../tp-account-widgets/tpaw-utils.c:157
+msgid "Facebook Chat"
+msgstr "Chat di Facebook"
